// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HelpCentreContactOptions Help Centre landing page Help Centre article (compact layout and contact options hidden) with live chat feature switches disabled shows email and phone contacts only 1`] = `
[
  .emotion-0 {
  border-top: 1px solid #DCDCDC;
  margin-top: 30px;
  font-family: GH Guardian Headline,Guardian Egyptian Web,Georgia,serif;
  font-size: 1.75rem;
  line-height: 1.15;
  font-weight: 700;
  --source-text-decoration-thickness: 3px;
  margin-bottom: 24px;
}

@media (min-width: 740px) {
  .emotion-0 {
    margin-bottom: 24px;
    margin-top: 40px;
  }
}

<h2
    className="emotion-0"
  >
    Still can’t find what you’re looking for?
  </h2>,
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  text-align: left;
  font-weight: normal;
}

.emotion-1 {
  width: 100%;
  border: 1px solid #DCDCDC;
}

.emotion-2 {
  font-family: GuardianTextSans,Guardian Text Sans Web,Helvetica Neue,Helvetica,Arial,Lucida Grande,sans-serif;
  font-size: 1.0625rem;
  line-height: 1.3;
  font-weight: 400;
  --source-text-decoration-thickness: 2px;
  margin: 0;
  padding: 16px 47px 16px 16px;
  position: relative;
  cursor: pointer;
  font-weight: bold;
  background-color: #F6F6F6;
  border-bottom: 1px solid #DCDCDC;
}

.emotion-2:after {
  content: "";
  display: block;
  width: 7px;
  height: 7px;
  border-top: 2px solid #121212;
  border-right: 2px solid #121212;
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-1px) rotate(-45deg);
  -moz-transform: translateY(-1px) rotate(-45deg);
  -ms-transform: translateY(-1px) rotate(-45deg);
  transform: translateY(-1px) rotate(-45deg);
  -webkit-transition: -webkit-transform 0.4s;
  transition: transform 0.4s;
  right: 17px;
}

.emotion-3 {
  display: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

@media (min-width: 980px) {
  .emotion-3 {
    display: block;
    position: absolute;
    top: 50%;
    -webkit-transform: translateY(-50%);
    -moz-transform: translateY(-50%);
    -ms-transform: translateY(-50%);
    transform: translateY(-50%);
    right: 32px;
    font-weight: normal;
    font-size: 0.75rem;
  }
}

.emotion-4 {
  display: block;
  background-color: #F6F6F6;
  padding: 16px;
}

.emotion-5 {
  font-family: GuardianTextSans,Guardian Text Sans Web,Helvetica Neue,Helvetica,Arial,Lucida Grande,sans-serif;
  font-size: 1.0625rem;
  line-height: 1.3;
  font-weight: 400;
  --source-text-decoration-thickness: 2px;
  margin: 6px 0 4px;
}

.emotion-6 {
  font-family: GuardianTextSans,Guardian Text Sans Web,Helvetica Neue,Helvetica,Arial,Lucida Grande,sans-serif;
  font-size: 1.0625rem;
  line-height: 1.3;
  font-weight: 700;
  --source-text-decoration-thickness: 2px;
  word-break: break-word;
}

.emotion-7 {
  font-family: GuardianTextSans,Guardian Text Sans Web,Helvetica Neue,Helvetica,Arial,Lucida Grande,sans-serif;
  font-size: 1.0625rem;
  line-height: 1.3;
  font-weight: 400;
  --source-text-decoration-thickness: 2px;
  margin: 6px 0 4px;
}

.emotion-8 {
  font-family: GuardianTextSans,Guardian Text Sans Web,Helvetica Neue,Helvetica,Arial,Lucida Grande,sans-serif;
  font-size: 1.0625rem;
  line-height: 1.3;
  font-weight: 400;
  --source-text-decoration-thickness: 2px;
  margin-bottom: 0;
}

.emotion-8+p {
  margin-top: 16px;
}

.emotion-9 {
  display: block;
  margin-bottom: 4px;
  font-weight: bold;
}

.emotion-10 {
  display: block;
}

.emotion-12 {
  font-family: GuardianTextSans,Guardian Text Sans Web,Helvetica Neue,Helvetica,Arial,Lucida Grande,sans-serif;
  font-size: 1.0625rem;
  line-height: 1.3;
  font-weight: 400;
  --source-text-decoration-thickness: 2px;
  margin: 0;
  padding: 16px 47px 16px 16px;
  position: relative;
  cursor: pointer;
}

.emotion-12:after {
  content: "";
  display: block;
  width: 7px;
  height: 7px;
  border-top: 2px solid #121212;
  border-right: 2px solid #121212;
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-3.5px) rotate(135deg);
  -moz-transform: translateY(-3.5px) rotate(135deg);
  -ms-transform: translateY(-3.5px) rotate(135deg);
  transform: translateY(-3.5px) rotate(135deg);
  -webkit-transition: -webkit-transform 0.4s;
  transition: transform 0.4s;
  right: 17px;
}

.emotion-12:before {
  content: "";
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 1px;
  background-color: #DCDCDC;
}

.emotion-14 {
  display: none;
  background-color: #F6F6F6;
  padding: 16px;
}

.emotion-20 {
  font-weight: normal;
}

<div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <div>
        <h2
          className="emotion-2"
          onClick={[Function]}
        >
          United Kingdom, Europe and rest of world
          <span
            aria-hidden="true"
            className="emotion-3"
          >
            Hide
          </span>
        </h2>
        <div
          className="emotion-4"
        >
          <h4
            className="emotion-5"
          >
            Email:
          </h4>
          <span
            className="emotion-6"
          >
            customer.help@theguardian.com
          </span>
          <h4
            className="emotion-7"
          >
            Phone:
          </h4>
          <p
            className="emotion-8"
          >
            <span
              className="emotion-9"
            >
              +44 (0) 330 333 6767
            </span>
            <span
              className="emotion-10"
            >
              8am - 6pm Monday - Friday (GMT/BST)
            </span>
            <span
              className="emotion-10"
            >
              9am - 6pm Saturday - Sunday (GMT/BST)
            </span>
          </p>
        </div>
      </div>
      <div>
        <h2
          className="emotion-12"
          onClick={[Function]}
        >
          Australia, New Zealand, and Asia Pacific
          <span
            aria-hidden="true"
            className="emotion-3"
          >
            Show
          </span>
        </h2>
        <div
          className="emotion-14"
        >
          <h4
            className="emotion-5"
          >
            Email:
          </h4>
          <span
            className="emotion-6"
          >
            customer.help@theguardian.com
          </span>
          <h4
            className="emotion-7"
          >
            Phone:
          </h4>
          <p
            className="emotion-8"
          >
            <span
              className="emotion-9"
            >
              1800 773 766
              <span
                className="emotion-20"
              >
                 
                (within Australia)
              </span>
            </span>
            <span
              className="emotion-9"
            >
              +61 28076 8599
              <span
                className="emotion-20"
              >
                 
                (outside Australia)
              </span>
            </span>
            <span
              className="emotion-10"
            >
              9am - 5pm Monday - Friday (AEDT)
            </span>
          </p>
        </div>
      </div>
      <div>
        <h2
          className="emotion-12"
          onClick={[Function]}
        >
          Canada and USA
          <span
            aria-hidden="true"
            className="emotion-3"
          >
            Show
          </span>
        </h2>
        <div
          className="emotion-14"
        >
          <h4
            className="emotion-5"
          >
            Email:
          </h4>
          <span
            className="emotion-6"
          >
            customer.help@theguardian.com
          </span>
          <h4
            className="emotion-7"
          >
            Phone:
          </h4>
          <p
            className="emotion-8"
          >
            <span
              className="emotion-9"
            >
              1-844-632-2010
              <span
                className="emotion-20"
              >
                 
                (toll free USA)
              </span>
            </span>
            <span
              className="emotion-9"
            >
              +1 917-900-4663
              <span
                className="emotion-20"
              >
                 
                (outside USA)
              </span>
            </span>
            <span
              className="emotion-10"
            >
              9am - 5pm on weekdays (EST/EDT)
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`HelpCentreContactOptions Help Centre landing page with live chat feature switch disabled shows email and phone contacts only 1`] = `
[
  .emotion-0 {
  border-top: 1px solid #DCDCDC;
  margin-top: 30px;
  font-family: GH Guardian Headline,Guardian Egyptian Web,Georgia,serif;
  font-size: 1.75rem;
  line-height: 1.15;
  font-weight: 700;
  --source-text-decoration-thickness: 3px;
  margin-bottom: 24px;
}

@media (min-width: 740px) {
  .emotion-0 {
    margin-bottom: 24px;
    margin-top: 40px;
  }
}

<h2
    className="emotion-0"
  >
    Still can’t find what you’re looking for?
  </h2>,
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  text-align: left;
  font-weight: normal;
}

.emotion-1 {
  width: 100%;
  border: 1px solid #DCDCDC;
}

.emotion-2 {
  font-family: GuardianTextSans,Guardian Text Sans Web,Helvetica Neue,Helvetica,Arial,Lucida Grande,sans-serif;
  font-size: 1.0625rem;
  line-height: 1.3;
  font-weight: 400;
  --source-text-decoration-thickness: 2px;
  margin: 0;
  padding: 16px 47px 16px 16px;
  position: relative;
  cursor: pointer;
  font-weight: bold;
  background-color: #F6F6F6;
  border-bottom: 1px solid #DCDCDC;
}

.emotion-2:after {
  content: "";
  display: block;
  width: 7px;
  height: 7px;
  border-top: 2px solid #121212;
  border-right: 2px solid #121212;
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-1px) rotate(-45deg);
  -moz-transform: translateY(-1px) rotate(-45deg);
  -ms-transform: translateY(-1px) rotate(-45deg);
  transform: translateY(-1px) rotate(-45deg);
  -webkit-transition: -webkit-transform 0.4s;
  transition: transform 0.4s;
  right: 17px;
}

.emotion-3 {
  display: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

@media (min-width: 980px) {
  .emotion-3 {
    display: block;
    position: absolute;
    top: 50%;
    -webkit-transform: translateY(-50%);
    -moz-transform: translateY(-50%);
    -ms-transform: translateY(-50%);
    transform: translateY(-50%);
    right: 32px;
    font-weight: normal;
    font-size: 0.75rem;
  }
}

.emotion-4 {
  display: block;
  background-color: #F6F6F6;
  padding: 16px;
}

.emotion-5 {
  font-family: GuardianTextSans,Guardian Text Sans Web,Helvetica Neue,Helvetica,Arial,Lucida Grande,sans-serif;
  font-size: 1.0625rem;
  line-height: 1.3;
  font-weight: 400;
  --source-text-decoration-thickness: 2px;
  margin: 6px 0 4px;
}

.emotion-6 {
  font-family: GuardianTextSans,Guardian Text Sans Web,Helvetica Neue,Helvetica,Arial,Lucida Grande,sans-serif;
  font-size: 1.0625rem;
  line-height: 1.3;
  font-weight: 700;
  --source-text-decoration-thickness: 2px;
  word-break: break-word;
}

.emotion-7 {
  font-family: GuardianTextSans,Guardian Text Sans Web,Helvetica Neue,Helvetica,Arial,Lucida Grande,sans-serif;
  font-size: 1.0625rem;
  line-height: 1.3;
  font-weight: 400;
  --source-text-decoration-thickness: 2px;
  margin: 6px 0 4px;
}

.emotion-8 {
  font-family: GuardianTextSans,Guardian Text Sans Web,Helvetica Neue,Helvetica,Arial,Lucida Grande,sans-serif;
  font-size: 1.0625rem;
  line-height: 1.3;
  font-weight: 400;
  --source-text-decoration-thickness: 2px;
  margin-bottom: 0;
}

.emotion-8+p {
  margin-top: 16px;
}

.emotion-9 {
  display: block;
  margin-bottom: 4px;
  font-weight: bold;
}

.emotion-10 {
  display: block;
}

.emotion-12 {
  font-family: GuardianTextSans,Guardian Text Sans Web,Helvetica Neue,Helvetica,Arial,Lucida Grande,sans-serif;
  font-size: 1.0625rem;
  line-height: 1.3;
  font-weight: 400;
  --source-text-decoration-thickness: 2px;
  margin: 0;
  padding: 16px 47px 16px 16px;
  position: relative;
  cursor: pointer;
}

.emotion-12:after {
  content: "";
  display: block;
  width: 7px;
  height: 7px;
  border-top: 2px solid #121212;
  border-right: 2px solid #121212;
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-3.5px) rotate(135deg);
  -moz-transform: translateY(-3.5px) rotate(135deg);
  -ms-transform: translateY(-3.5px) rotate(135deg);
  transform: translateY(-3.5px) rotate(135deg);
  -webkit-transition: -webkit-transform 0.4s;
  transition: transform 0.4s;
  right: 17px;
}

.emotion-12:before {
  content: "";
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 1px;
  background-color: #DCDCDC;
}

.emotion-14 {
  display: none;
  background-color: #F6F6F6;
  padding: 16px;
}

.emotion-20 {
  font-weight: normal;
}

<div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <div>
        <h2
          className="emotion-2"
          onClick={[Function]}
        >
          United Kingdom, Europe and rest of world
          <span
            aria-hidden="true"
            className="emotion-3"
          >
            Hide
          </span>
        </h2>
        <div
          className="emotion-4"
        >
          <h4
            className="emotion-5"
          >
            Email:
          </h4>
          <span
            className="emotion-6"
          >
            customer.help@theguardian.com
          </span>
          <h4
            className="emotion-7"
          >
            Phone:
          </h4>
          <p
            className="emotion-8"
          >
            <span
              className="emotion-9"
            >
              +44 (0) 330 333 6767
            </span>
            <span
              className="emotion-10"
            >
              8am - 6pm Monday - Friday (GMT/BST)
            </span>
            <span
              className="emotion-10"
            >
              9am - 6pm Saturday - Sunday (GMT/BST)
            </span>
          </p>
        </div>
      </div>
      <div>
        <h2
          className="emotion-12"
          onClick={[Function]}
        >
          Australia, New Zealand, and Asia Pacific
          <span
            aria-hidden="true"
            className="emotion-3"
          >
            Show
          </span>
        </h2>
        <div
          className="emotion-14"
        >
          <h4
            className="emotion-5"
          >
            Email:
          </h4>
          <span
            className="emotion-6"
          >
            customer.help@theguardian.com
          </span>
          <h4
            className="emotion-7"
          >
            Phone:
          </h4>
          <p
            className="emotion-8"
          >
            <span
              className="emotion-9"
            >
              1800 773 766
              <span
                className="emotion-20"
              >
                 
                (within Australia)
              </span>
            </span>
            <span
              className="emotion-9"
            >
              +61 28076 8599
              <span
                className="emotion-20"
              >
                 
                (outside Australia)
              </span>
            </span>
            <span
              className="emotion-10"
            >
              9am - 5pm Monday - Friday (AEDT)
            </span>
          </p>
        </div>
      </div>
      <div>
        <h2
          className="emotion-12"
          onClick={[Function]}
        >
          Canada and USA
          <span
            aria-hidden="true"
            className="emotion-3"
          >
            Show
          </span>
        </h2>
        <div
          className="emotion-14"
        >
          <h4
            className="emotion-5"
          >
            Email:
          </h4>
          <span
            className="emotion-6"
          >
            customer.help@theguardian.com
          </span>
          <h4
            className="emotion-7"
          >
            Phone:
          </h4>
          <p
            className="emotion-8"
          >
            <span
              className="emotion-9"
            >
              1-844-632-2010
              <span
                className="emotion-20"
              >
                 
                (toll free USA)
              </span>
            </span>
            <span
              className="emotion-9"
            >
              +1 917-900-4663
              <span
                className="emotion-20"
              >
                 
                (outside USA)
              </span>
            </span>
            <span
              className="emotion-10"
            >
              9am - 5pm on weekdays (EST/EDT)
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`HelpCentreContactOptions Help Centre landing page with live chat feature switch enabled shows the live chat contact box 1`] = `
[
  .emotion-0 {
  border-top: 1px solid #DCDCDC;
  margin-top: 30px;
  font-family: GH Guardian Headline,Guardian Egyptian Web,Georgia,serif;
  font-size: 1.75rem;
  line-height: 1.15;
  font-weight: 700;
  --source-text-decoration-thickness: 3px;
  margin-bottom: 4px;
}

@media (min-width: 740px) {
  .emotion-0 {
    margin-bottom: 0;
    margin-top: 40px;
  }
}

<h2
    className="emotion-0"
  >
    Still can’t find what you’re looking for?
  </h2>,
  .emotion-0 {
  font-family: GuardianTextSans,Guardian Text Sans Web,Helvetica Neue,Helvetica,Arial,Lucida Grande,sans-serif;
  font-size: 1.0625rem;
  line-height: 1.3;
  font-weight: 400;
  --source-text-decoration-thickness: 2px;
  margin-bottom: 4px;
  max-width: 320px;
}

@media (min-width: 740px) {
  .emotion-0 {
    max-width: none;
  }
}

@media (min-width: 1300px) {
  .emotion-0 {
    display: none;
  }
}

<p
    className="emotion-0"
  >
    Get in touch with one of our customer service agents.
  </p>,
  .emotion-0 {
  margin-bottom: 8px;
  text-align: right;
}

.emotion-0 a {
  font-family: GuardianTextSans,Guardian Text Sans Web,Helvetica Neue,Helvetica,Arial,Lucida Grande,sans-serif;
  font-size: 0.9375rem;
  line-height: 1.3;
  font-weight: 400;
  --source-text-decoration-thickness: 2px;
  color: #0077B6;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@media (min-width: 660px) {
  .emotion-1 {
    -webkit-flex-direction: row-reverse;
    -ms-flex-direction: row-reverse;
    flex-direction: row-reverse;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    justify-content: space-between;
  }
}

.emotion-1>* {
  margin-bottom: 20px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 1px solid #DCDCDC;
  font-family: GuardianTextSans,Guardian Text Sans Web,Helvetica Neue,Helvetica,Arial,Lucida Grande,sans-serif;
  font-size: 1.0625rem;
  line-height: 1.3;
  font-weight: 400;
  --source-text-decoration-thickness: 2px;
}

@media (min-width: 660px) {
  .emotion-2 {
    width: calc(50% - 10px);
  }
}

.emotion-3 {
  font-family: GuardianTextSans,Guardian Text Sans Web,Helvetica Neue,Helvetica,Arial,Lucida Grande,sans-serif;
  font-size: 1.25rem;
  line-height: 1.3;
  font-weight: 700;
  --source-text-decoration-thickness: 3px;
  color: #333333;
  position: relative;
  margin: 0;
  padding: 18px 0 18px 60px;
}

@media (min-width: 980px) {
  .emotion-3 {
    padding: 22px 0 22px 64px;
  }
}

.emotion-4 {
  position: absolute;
  top: 12px;
  left: 12px;
}

@media (min-width: 980px) {
  .emotion-4 {
    top: 16px;
    left: 16px;
  }
}

.emotion-5 {
  display: none;
  margin: 0 16px 12px 16px;
}

@media (min-width: 1300px) {
  .emotion-5 {
    display: block;
  }
}

.emotion-6 {
  border-top: 1px solid #DCDCDC;
  padding: 12px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-6 p {
  margin-bottom: 0;
}

@media (min-width: 1300px) {
  .emotion-6 {
    padding: 12px 0 0;
    margin: 0 16px 16px;
  }
}

.emotion-7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  background: transparent;
  cursor: pointer;
  -webkit-transition: .3s ease-in-out;
  transition: .3s ease-in-out;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  font-family: GuardianTextSans,Guardian Text Sans Web,Helvetica Neue,Helvetica,Arial,Lucida Grande,sans-serif;
  font-size: 1.0625rem;
  line-height: 1.3;
  font-weight: 700;
  --source-text-decoration-thickness: 2px;
  height: 44px;
  min-height: 44px;
  padding: 0 20px;
  border-radius: 44px;
  padding-bottom: 2px;
  background-color: #C1D8FC;
  color: #052962;
  margin-bottom: 20px;
  margin-top: 4px;
}

.emotion-7:disabled {
  cursor: not-allowed;
}

.emotion-7:focus {
  outline: 0;
}

html:not(.src-focus-disabled) .emotion-7:focus {
  outline: 5px solid #0077B6;
  outline-offset: 3px;
}

.emotion-7:hover {
  background-color: #ACC9F7;
}

.emotion-7 svg {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  display: block;
  fill: currentColor;
  position: relative;
  width: 30px;
  height: auto;
}

.emotion-7 .src-button-space {
  width: 12px;
}

.emotion-7 svg {
  margin-right: -4px;
}

@media (min-width: 740px) {
  .emotion-7 {
    margin-bottom: 36px;
  }
}

.emotion-13 {
  font-weight: bold;
  margin-bottom: 36px!important;
}

.emotion-14 {
  border-top: 1px solid #DCDCDC;
  border-left: 1px solid #DCDCDC;
  border-right: 1px solid #DCDCDC;
}

.emotion-15 {
  font-family: GuardianTextSans,Guardian Text Sans Web,Helvetica Neue,Helvetica,Arial,Lucida Grande,sans-serif;
  font-size: 1.25rem;
  line-height: 1.3;
  font-weight: 700;
  --source-text-decoration-thickness: 3px;
  color: #333333;
  position: relative;
  margin: 0;
  padding: 18px 0 18px 60px;
}

@media (min-width: 980px) {
  .emotion-15 {
    padding: 22px 0 22px 64px;
  }
}

.emotion-16 {
  position: absolute;
  top: 12px;
  left: 12px;
}

@media (min-width: 980px) {
  .emotion-16 {
    top: 16px;
    left: 16px;
  }
}

.emotion-17 {
  display: none;
  font-family: GuardianTextSans,Guardian Text Sans Web,Helvetica Neue,Helvetica,Arial,Lucida Grande,sans-serif;
  font-size: 1.0625rem;
  line-height: 1.3;
  font-weight: 400;
  --source-text-decoration-thickness: 2px;
  padding: 0 16px 16px 16px;
  margin: 0;
}

@media (min-width: 1300px) {
  .emotion-17 {
    display: block;
  }
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  text-align: left;
  font-weight: normal;
}

.emotion-19 {
  width: 100%;
  border: 1px solid #DCDCDC;
}

.emotion-20 {
  font-family: GuardianTextSans,Guardian Text Sans Web,Helvetica Neue,Helvetica,Arial,Lucida Grande,sans-serif;
  font-size: 1.0625rem;
  line-height: 1.3;
  font-weight: 400;
  --source-text-decoration-thickness: 2px;
  margin: 0;
  padding: 16px 47px 16px 16px;
  position: relative;
  cursor: pointer;
  font-weight: bold;
  background-color: #F6F6F6;
  border-bottom: 1px solid #DCDCDC;
}

.emotion-20:after {
  content: "";
  display: block;
  width: 7px;
  height: 7px;
  border-top: 2px solid #121212;
  border-right: 2px solid #121212;
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-1px) rotate(-45deg);
  -moz-transform: translateY(-1px) rotate(-45deg);
  -ms-transform: translateY(-1px) rotate(-45deg);
  transform: translateY(-1px) rotate(-45deg);
  -webkit-transition: -webkit-transform 0.4s;
  transition: transform 0.4s;
  right: 17px;
}

.emotion-21 {
  display: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

@media (min-width: 980px) {
  .emotion-21 {
    display: block;
    position: absolute;
    top: 50%;
    -webkit-transform: translateY(-50%);
    -moz-transform: translateY(-50%);
    -ms-transform: translateY(-50%);
    transform: translateY(-50%);
    right: 32px;
    font-weight: normal;
    font-size: 0.75rem;
  }
}

.emotion-22 {
  display: block;
  background-color: #F6F6F6;
  padding: 16px;
}

.emotion-23 {
  font-family: GuardianTextSans,Guardian Text Sans Web,Helvetica Neue,Helvetica,Arial,Lucida Grande,sans-serif;
  font-size: 1.0625rem;
  line-height: 1.3;
  font-weight: 400;
  --source-text-decoration-thickness: 2px;
  margin-bottom: 0;
}

.emotion-23+p {
  margin-top: 16px;
}

.emotion-24 {
  display: block;
  margin-bottom: 4px;
  font-weight: bold;
}

.emotion-25 {
  display: block;
}

.emotion-27 {
  font-family: GuardianTextSans,Guardian Text Sans Web,Helvetica Neue,Helvetica,Arial,Lucida Grande,sans-serif;
  font-size: 1.0625rem;
  line-height: 1.3;
  font-weight: 400;
  --source-text-decoration-thickness: 2px;
  margin: 0;
  padding: 16px 47px 16px 16px;
  position: relative;
  cursor: pointer;
}

.emotion-27:after {
  content: "";
  display: block;
  width: 7px;
  height: 7px;
  border-top: 2px solid #121212;
  border-right: 2px solid #121212;
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-3.5px) rotate(135deg);
  -moz-transform: translateY(-3.5px) rotate(135deg);
  -ms-transform: translateY(-3.5px) rotate(135deg);
  transform: translateY(-3.5px) rotate(135deg);
  -webkit-transition: -webkit-transform 0.4s;
  transition: transform 0.4s;
  right: 17px;
}

.emotion-27:before {
  content: "";
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 1px;
  background-color: #DCDCDC;
}

.emotion-29 {
  display: none;
  background-color: #F6F6F6;
  padding: 16px;
}

.emotion-32 {
  font-weight: normal;
}

.emotion-45 {
  margin-top: 36px;
  padding: 12px;
  background-color: #ecf3fe;
}

@media (min-width: 980px) {
  .emotion-45 {
    padding: 24px;
  }
}

.emotion-46 {
  margin: 0;
  font-family: GuardianTextSans,Guardian Text Sans Web,Helvetica Neue,Helvetica,Arial,Lucida Grande,sans-serif;
  font-size: 0.9375rem;
  line-height: 1.3;
  font-weight: 700;
  --source-text-decoration-thickness: 2px;
}

.emotion-47 {
  font-family: GuardianTextSans,Guardian Text Sans Web,Helvetica Neue,Helvetica,Arial,Lucida Grande,sans-serif;
  font-size: 0.9375rem;
  line-height: 1.3;
  font-weight: 400;
  --source-text-decoration-thickness: 2px;
  max-width: 830px;
  margin: 0;
}

.emotion-47 a {
  color: #0077B6;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div
    aria-live="polite"
  >
    <div
      className="emotion-0"
    >
      <a
        href="#livechatPrivacyNotice"
      >
        data privacy notice
      </a>
    </div>
    <div
      className="emotion-1"
    >
      <div
        className="emotion-2"
      >
        <div>
          <h2
            className="emotion-3"
          >
            <i
              className="emotion-4"
            >
              <svg
                fill="none"
                height={39}
                viewBox="0 0 39 39"
                width={39}
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="19.5"
                  cy="19.5"
                  fill="#052962"
                  r="19.5"
                />
                <g
                  transform="matrix(-1,0,0,1,39.14842,0)"
                >
                  <path
                    clipRule="evenodd"
                    d="m 29.3242,14.688 -1.625,-1.625 h -16.25 l -1.62498,1.625 v 9.7499 l 1.59788,1.625 h 2.7354 v 5.4167 h 1.0563 l 3.2771,-5.4167 h 9.2083 l 1.625,-1.625 z"
                    fill="#ffffff"
                    fillRule="evenodd"
                  />
                  <circle
                    cx="14.6187"
                    cy="19.552299"
                    fill="#052962"
                    r="1.23884"
                  />
                  <circle
                    cx="19.5748"
                    cy="19.552299"
                    fill="#052962"
                    r="1.23884"
                  />
                  <circle
                    cx="24.5299"
                    cy="19.552299"
                    fill="#052962"
                    r="1.23884"
                  />
                </g>
              </svg>
            </i>
            Chat with us
          </h2>
          <p
            className="emotion-5"
          >
            Chat with one of our customer service agents.
          </p>
        </div>
        <div
          className="emotion-6"
        >
          <button
            aria-live="polite"
            className="emotion-7"
            onClick={[Function]}
            type="button"
          >
            Start live chat
            <div
              className="src-button-space"
            />
            <svg
              aria-hidden={true}
              focusable={false}
              viewBox="-3 -3 30 30"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clipRule="evenodd"
                d="M1 12.956h18.274l-7.167 8.575.932.932L23 12.478v-.956l-9.96-9.985-.932.932 7.166 8.575H1v1.912Z"
                fillRule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        className="emotion-2"
      >
        <div>
          <h2
            className="emotion-3"
          >
            <i
              className="emotion-4"
            >
              <svg
                fill="none"
                height={39}
                viewBox="0 0 39 39"
                width={39}
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="19.5"
                  cy="19.5"
                  fill="#052962"
                  r="19.5"
                />
                <g>
                  <path
                    d="M10.7902 11.7285L9.21875 13.427L19.1711 21.3535H21.2664L31.2188 13.427L29.6473 11.7285H10.7902Z"
                    fill="white"
                  />
                  <path
                    d="M9.21875 25.3535V15.8535L19.1711 22.8535H21.2664L31.2188 15.8535V25.3535L29.6473 26.8535H10.7902L9.21875 25.3535Z"
                    fill="white"
                  />
                </g>
              </svg>
            </i>
            Email us
          </h2>
          <p
            className="emotion-5"
          >
            Send a message to one of our customer service agents.
          </p>
        </div>
        <div
          className="emotion-6"
        >
          <p
            className="emotion-13"
          >
            customer.help@theguardian.com
          </p>
        </div>
      </div>
    </div>
    <div
      className="emotion-14"
      id="call-us"
    >
      <h2
        className="emotion-15"
      >
        <i
          className="emotion-16"
        >
          <svg
            fill="none"
            height={39}
            viewBox="0 0 39 39"
            width={39}
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="19.5"
              cy="19.5"
              fill="#052962"
              r="19.5"
            />
            <circle
              cx="19.5"
              cy="19.65"
              fill="#052962"
              r="19.5"
            />
            <path
              d="M28.917 23.844c-.518-.236-3.05-1.436-3.527-1.593-.477-.157-.809-.236-1.162.236-.352.492-1.327 1.593-1.639 1.907-.29.335-.601.374-1.12.118-.519-.236-2.178-.767-4.15-2.418-1.535-1.298-2.572-2.89-2.862-3.382-.312-.492-.042-.747.228-1.003.228-.216.518-.57.767-.865.25-.295.353-.492.519-.826.166-.334.083-.61-.041-.865-.125-.236-1.162-2.655-1.598-3.638-.415-.963-.85-.826-1.162-.845-.29-.02-.643-.02-.996-.02a1.88 1.88 0 00-1.369.61C10.349 11.75 9 12.93 9 15.35c0 2.398 1.847 4.738 2.116 5.053.25.334 3.631 5.27 8.818 7.393 1.224.511 2.199.806 2.946 1.023 1.245.373 2.365.314 3.257.196.996-.138 3.05-1.18 3.486-2.32.435-1.14.435-2.124.29-2.32-.124-.158-.477-.276-.996-.531z"
              fill="#fff"
            />
          </svg>
        </i>
        Call us
      </h2>
      <p
        className="emotion-17"
      >
        Speak with one of our customer service agents.
      </p>
    </div>
    <div
      className="emotion-18"
    >
      <div
        className="emotion-19"
      >
        <div>
          <h2
            className="emotion-20"
            onClick={[Function]}
          >
            United Kingdom, Europe and rest of world
            <span
              aria-hidden="true"
              className="emotion-21"
            >
              Hide
            </span>
          </h2>
          <div
            className="emotion-22"
          >
            <p
              className="emotion-23"
            >
              <span
                className="emotion-24"
              >
                +44 (0) 330 333 6767
              </span>
              <span
                className="emotion-25"
              >
                8am - 6pm Monday - Friday (GMT/BST)
              </span>
              <span
                className="emotion-25"
              >
                9am - 6pm Saturday - Sunday (GMT/BST)
              </span>
            </p>
          </div>
        </div>
        <div>
          <h2
            className="emotion-27"
            onClick={[Function]}
          >
            Australia, New Zealand, and Asia Pacific
            <span
              aria-hidden="true"
              className="emotion-21"
            >
              Show
            </span>
          </h2>
          <div
            className="emotion-29"
          >
            <p
              className="emotion-23"
            >
              <span
                className="emotion-24"
              >
                1800 773 766
                <span
                  className="emotion-32"
                >
                   
                  (within Australia)
                </span>
              </span>
              <span
                className="emotion-24"
              >
                +61 28076 8599
                <span
                  className="emotion-32"
                >
                   
                  (outside Australia)
                </span>
              </span>
              <span
                className="emotion-25"
              >
                9am - 5pm Monday - Friday (AEDT)
              </span>
            </p>
          </div>
        </div>
        <div>
          <h2
            className="emotion-27"
            onClick={[Function]}
          >
            Canada and USA
            <span
              aria-hidden="true"
              className="emotion-21"
            >
              Show
            </span>
          </h2>
          <div
            className="emotion-29"
          >
            <p
              className="emotion-23"
            >
              <span
                className="emotion-24"
              >
                1-844-632-2010
                <span
                  className="emotion-32"
                >
                   
                  (toll free USA)
                </span>
              </span>
              <span
                className="emotion-24"
              >
                +1 917-900-4663
                <span
                  className="emotion-32"
                >
                   
                  (outside USA)
                </span>
              </span>
              <span
                className="emotion-25"
              >
                9am - 5pm on weekdays (EST/EDT)
              </span>
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      className="emotion-45"
      id="livechatPrivacyNotice"
    >
      <h2
        className="emotion-46"
      >
        Data privacy notice
      </h2>
      <p
        className="emotion-47"
      >
        We use a type of cookie technology called an SDK (Software Development Kit) to ensure that our live chat services work correctly and meet your expectations. It cannot be switched off but it is removed at the end of the chat. If you do not wish for this cookie to be dropped on your device, please email or phone us instead. Live chats and phone calls will be recorded for monitoring and training purposes. Please do not disclose personal data of a sensitive nature in the live chat, such as health or financial information. A copy of the chat transcript will be emailed to you unless the chat contains payment card information, in which case no transcript will be sent. Click to find out more in our
         
        <a
          href="https://thegulocal.com/info/privacy"
        >
          privacy policy
        </a>
         
        and 
        <a
          href="https://thegulocal.com/info/cookies"
        >
          cookie policy
        </a>
        .
      </p>
    </div>
  </div>,
]
`;
